--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./styles/style.css">
   
   <title>Frontend Mentor | Article preview component</title>
 </head>
@@ -17,28 +18,36 @@
       <div class="article__hero">
         <img src="./images/drawers.jpg" alt="dresser" class="article__img">
       </div>
+
       <div class="article__content">
         <h1 class="article__title">Shift the overall look and feel by adding these wonderful 
           touches to furniture in your home</h1>
-        <p class="article__preview">Ever been in a room and felt like something was missing? Perhaps 
+        <p class="article__text">Ever been in a room and felt like something was missing? Perhaps 
           it felt slightly bare and uninviting. I’ve got some simple tips 
           to help you make any room feel complete.</p>
       </div>
 
-      <div class="article__info">
-        <div class="article__img--round">
-          <img src="./images/avatar-michelle.jpg" alt="author-img" class="author__img">
+      <div class="article__details">
+        <div class="article__img-wrapper">
+          <img src="./images/avatar-michelle.jpg" alt="author" class="article__img img--round">
         </div>
-        <span class="article__author-name">Michelle Appleton</span>
-        <span class="article__publish-date">28 Jun 2020</span>
+
+        <div class="article__author-info">
+          <p class="article__author-name">Michelle Appleton</p>
+          <p class="article__publish-date">28 Jun 2020</p>
+        </div>
+
+        <button  class="article__btn btn--round">
+          <img class="article__img img" src="./images/icon-share.svg" alt="icon">
+        </button>
       </div>
-      <div class="article__share-box">
+
+      <!-- <div class="article__share-box">
         <span>SHARE</span>
         <img href="./images/icon-facebook.svg" class="icon"></img>
         <img href="./images/icon-twitter.svg" class="icon"></img>
         <img href="./images/icon-pinterest.svg" class="icon"></img>
-      </div>
-      <button class="article__btn--round"></button>
+      </div> -->
     </article>
   </div>
 
