--- a/index.html
+++ b/index.html
@@ -7,43 +7,42 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/index.css">
   
-  <title>Frontend Mentor | Article preview component</title>
+  <title>Article preview component</title>
 </head>
 
 <body>
   <div class="container">
-    <article class="article">
-      <div class="article__hero">
-        <img src="./images/drawers.jpg" alt="dresser" class="article__img">
-      </div>
+    <article class="card">
+      <img class="img" src="./images/drawers.jpg" alt="Green dresser.">
 
-      <div class="article__content">
-        <h1 class="article__title">Shift the overall look and feel by adding these wonderful 
-          touches to furniture in your home</h1>
-        <p class="article__text">Ever been in a room and felt like something was missing? Perhaps 
-          it felt slightly bare and uninviting. I’ve got some simple tips 
-          to help you make any room feel complete.</p>
-      </div>
+      <h1 class="main-header">Shift the overall look and feel by adding these wonderful touches to furniture in your home</h1>
+      <p class="main-content">Ever been in a room and felt like something was missing? Perhaps it felt slightly bare and uninviting. I’ve got some simple tips to help you make any room feel complete.</p>
 
-      <div class="article__details">
-        <div class="article__img-wrapper">
-          <img src="./images/avatar-michelle.jpg" alt="author" class="article__img img--round">
-        </div>
-        
-        <div class="article__author-info">
-          <p class="article__author-name">Michelle Appleton</p>
-          <p class="article__publish-date">28 Jun 2020</p>
-        </div>
+        <footer class="footer-box">
+          <img class="avatar" src="./images/avatar-michelle.jpg" alt="avatar">
 
-        <button  class="article__btn btn--round">
-          <img class="article__img img" src="./images/icon-share.svg" alt="icon">
-        </button>
-      </div>
+            <div class="footer-content">
+              <h2 class="header">Michelle Appleton</h2>
+              <p class="text">28 Jun 2020</p>
+            </div>
+
+          <button>
+            <svg 
+              xmlns="http://www.w3.org/2000/svg" 
+              width="15" 
+              height="13"
+              >
+              <path fill="#6E8098" 
+              d="M15 6.495L8.766.014V3.88H7.441C3.33 3.88 0 7.039 0 10.936v2.049l.589-.612C2.59 10.294 5.422 9.11 8.39 9.11h.375v3.867L15 6.495z"
+              />
+            </svg>
+          </button> 
+        </footer> 
     </article>
   </div>
-
-<script src="./scripts/script.js"></script>
+    
+  <script src="./scripts/script.js"></script>
 </body>
 </html>
